[2017-10-20 00:21:08 +0200]  Add statebox input so check.py can be tested                               karasu      {90475f54}