@@ -60,6 +60,22 @@
                         <property name="position">1</property>
                     </packing>
                 </child>
+                <child>
+                    <object class="GtkButton" id="proxy_button">
+                        <property name="label" translatable="yes">I'm behind a proxy!</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="margin-top">0</property>
+                        <property name="margin-left">60</property>
+                        <property name="margin-right">60</property>
+                        <signal name="clicked" handler="on_setup_proxy" swapped="no"/>
+                    </object>
+                    <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">2</property>
+                    </packing>
+                </child>
             </object>
             <packing>
                 <property name="expand">True</property>
