@@ -1,1 +1,2 @@
+[2017-10-20 00:22:17 +0200]  [proxy] add commented lines                                                karasu      {7413ea82}
 [2017-10-20 00:21:08 +0200]  Add statebox input so check.py can be tested                               karasu      {90475f54}
